<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        android:contentDescription="@string/logodes" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/btn_info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/group_scan_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_scan_camera"
                style="@style/ButtonText"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_camera"
                android:text="@string/cam" />

            <Button
                android:id="@+id/btn_scan_image"
                style="@style/ButtonText"
                android:background="@drawable/btn_3dblkdefault"
                android:drawableTop="@drawable/ic_image"
                android:text="@string/img" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_misc_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" > 

            <Button
                android:id="@+id/btn_media"
                style="@style/ButtonText"
                android:background="@drawable/btn_3dreddefault"
                android:drawableTop="@drawable/ic_image" 
                android:text="@string/media" />

            <Button
                android:id="@+id/btn_preferences"
                style="@style/ButtonText"
                android:background="@drawable/btn_3dgrndefault"
                android:drawableTop="@drawable/ic_preferences"
                android:text="@string/setting" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>