<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logodes"
        android:background="@drawable/header" />
 
    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/btn_info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical" >
 
            <Button
                android:id="@+id/btn_media1"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image"
                android:orientation="horizontal"
                android:text="@string/media1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_media2"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image"
                android:orientation="horizontal"
                android:text="@string/media2"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_media3"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="250dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image"
                android:orientation="horizontal"
                android:text="@string/media3"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_media4"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="250dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image"
                android:orientation="horizontal"
                android:text="@string/media4"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_media5"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="400dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image"
                android:orientation="horizontal"
                android:text="@string/media5" 
                android:visibility="invisible" />
 
            <Button
                android:id="@+id/btn_media6"
                style="@style/ButtonText"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="400dp"
                android:background="@drawable/btn_3dbluedefault"
                android:drawableTop="@drawable/ic_image" 
                android:orientation="horizontal"
                android:text="@string/media6" 
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>